0.7.7     Sun Jun 15 21:23:52 WEST 2014 - r12725

   - Fixed chunk division that could make alignment fail on noisy corpora.
   - Fixed problems with missing VERSIONs on two packages.

0.7.6     Tue May 27 17:19:12 WEST 2014 - r12701

   - Fixed an installation problem that was hanging out.

0.7.5     Sat Oct 27 21:58:13 WEST 2012

   - Lingua::NATools::PTD was moved to Lingua::PTD.

0.7.4     Fri Oct 26 18:28:15 WEST 2012 - r11550

   - Fix issue with XS code that only worked on recent Perl versions.

0.7.3     Thu Aug 30 15:57:08 WEST 2012 - r11326

   - Release dedicated to Enrique Nell.
   - Hopefully fix the patch from 0.7.2.
   - Fix tests that run Perl to use the same perl binary as the build
     system.

0.7.2     Fri Jul 20 16:51:09 WEST 2012 - r11286

   - Implement wcsdup for Mac OS X before Lion

0.7.1     Fri Jun  8 17:50:41 WEST 2012 - r11221

   - Fix some POD issues.
   - Support new XML::TMX API.

0.7.0     Fri Mar 16 17:13:47 WET 2012

   - Releasing as stable.
   - Removing minor warnings during make test.


0.7.0_02  Sat Mar 10 22:28:26 WET 2012

   - Try to add libdir to ldconfig if possible.
   - Fixed installation procedure when there is a libnatools in the
     system.


0.7.0_01  Wed Mar  7 15:12:23 WET 2012

   - Changed words module interface --- less pointers of pointers of
     pointers.
   - Only UTF-8 support is available now.
   - ISO-8859-1 support droped.
   - Progressive removal of glib dependency  (U32/U8/gboolean).
   - Fix some scripts that were failing with perl'ization.
   - Fixed bug when summing up PTDs.


0.6.4     Sat Feb 25 16:30:40 WET 2012

   - Parse::Yapp driving me crazy.


0.6.3     Fri Feb 24 21:14:34 WET 2012

   - Parse::Yapp is a run dependency.


0.6.2     Sun Feb 19 21:19:29 WET 2012

   - Parse::Yapp is a build dependency.


0.6.1     Tue Feb 14 21:45:19 WET 2012

   - Fixed dependency on Capture::Tiny.


0.6.0     Fri Feb 10 12:26:01 WET 2012

   - releasing as stable.

